Laatste versie BP

--- a/bachproef-tin.bib
+++ b/bachproef-tin.bib
@@ -74,4 +74,25 @@
   url    = {https://www.ibm.com/support/knowledgecenter/zosbasics/com.ibm.zos.zmidwebs/zmiddle_86.htm?view=embed#zmiddle_86__usingplug},
 }
 
+@Book{Parziale2007,
+  author = {Parziale , Lydia and Drobnic, Ludvik and Facchinetti, Dario and Levey, Richard and Miu, Amy},
+  date   = {2007},
+  title  = {Implementing REXX Support in SDSF},
+  file   = {:C\:/Users/Jonas-PC-2/Documents/Hogent/Hogent 1920/Bachelorproef/Bib/REXX with sdsf.pdf:PDF},
+}
+
+@Online{Wood2012,
+  author = {Wood, Chip},
+  date   = {2012},
+  title  = {Accessing SDSF data using Rexx andJava},
+  file   = {:C\:/Users/Jonas-PC-2/Documents/Hogent/Hogent 1920/Bachelorproef/Bib/SHARE_Anaheim2012_RexxJava.pdf:PDF},
+}
+
+@Book{Vilaghy2002,
+  author = {Vilaghy, thomas and Beyerle, Marc and Lange, Jürgen and Mester, Axel and Pani, Frank},
+  date   = {2002},
+  title  = {e-business Cookbookfor z/OS Volume III:Java Development},
+  file   = {:C\:/Users/Jonas-PC-2/Documents/Hogent/Hogent 1920/Bachelorproef/Bib/e-business cookbook voor zOS Vol 3 java development.pdf:PDF},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
