--- a/conclusie.tex
+++ b/conclusie.tex
@@ -14,11 +14,11 @@
 % Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder 
 %onderzoek?
 
-De eerste onderzoeksvraag was of het mogelijk is om een standaardopstelling te maken voor z/OS Health Checker. Deze standaard setup is bereikt en wordt nu gebruikt binnen de mainframe omgeving van HCL technologies via de parmlib members in bijlage \ref{sec:Parmlin members voor z/OS Health Checker} die daar nu geïmplementeerd zijn. Als HCL Technologies wenst om hun parallel sysplex uit te breiden, kunnen ze de nieuwe parmlib members gebruiken om z/OS Health Checker te configureren voor de nieuwe LPAR. Een van de requirements voor HCL Technologies was een centraal beheer van de tool op 1 LPAR, dit was VT1. Nadat de globale checks eerst verspreid draaiden op alle LPARs, zullen ze nu allemaal vanuit VT1 draaien. En is er een centraal overzicht en beheer van deze checks via SDSF op VT1. 
+De eerste onderzoeksvraag was of het mogelijk was om een standaardopstelling te maken voor z/OS Health Checker. Deze standaard setup is bereikt en wordt nu gebruikt binnen de mainframe omgeving van HCL technologies via de parmlib members in bijlage \ref{sec:Parmlin members voor z/OS Health Checker} die daar nu geïmplementeerd zijn. Als HCL Technologies wenst om hun parallel sysplex uit te breiden, kunnen ze de nieuwe parmlib members gebruiken om z/OS Health Checker te configureren voor de nieuwe LPAR. Een van de requirements voor HCL Technologies was een centraal beheer van de tool op 1 LPAR, dit was VT1. Nadat de globale checks eerst verspreid draaiden op alle LPARs, zullen ze nu allemaal vanuit VT1 draaien. Er is nu een centraal overzicht en beheer van deze checks via SDSF op VT1. 
 
 Een andere requirement was een logging systeem zodat men de exceptions van bepaalde checks direct kan oplossen. Nadat het systeem met JCL jobs \& IBM Tivoli Workload Scheduler is opgezet, heeft men de verantwoordelijkheid voor het opvolgen van deze logging aan een team in India doorgegeven. Deze zal nu bij exceptions de verantwoordelijke van het product aansporen om het probleem op te lossen. Zij beheren nu ook de standaardopstelling zoals gedefinieerd in bijlage \ref{sec:Tabellen Standaard opstelling z/OS Health Checker}. Als er nieuwe checks zijn zullen zij deze ook toevoegen aan deze opstelling.
 
-Voor dit onderzoek was ik niet zeker of de standaardopstelling bereikt ging worden aangezien ik nog niks van z/OS Health Checker wist. Maar na een tijd werd duidelijk dat dit zeker ging lukken. Voor het logging systeem had ik wel al verwacht dat deze ging lukken aangezien er al documentatie beschikbaar was hoe je deze kan doen met HZSPRINT.
+Voor dit onderzoek was ik niet zeker of de standaardopstelling bereikt ging worden aangezien ik nog niks van z/OS Health Checker wist. Maar na een tijd werd duidelijk dat dit zeker ging lukken. Voor het logging systeem had ik wel al verwacht dat deze ging lukken aangezien er al documentatie beschikbaar was hoe je dit kan doen met HZSPRINT.
 
 Dit onderzoek bied zeker een meerwaarde voor bedrijven zoals HCL Technologies. Na deze proef is er een algemeen model opgesteld van hun opstelling voor Health Checker. Men zal met dit model problemen sneller kunnen opsporen en oplossen alvorens deze plaatsvinden. En door de opstelling zullen zij ook makkelijker hun Parallel Sysplex kunnen uitbreiden. De opstelling in de bijlage is dan ook in bezit van HCL Technologies en deze wordt nu ook gebruikt in hun mainframe testomgeving.
 
