--- a/bachproef-tin.tex
+++ b/bachproef-tin.tex
@@ -16,7 +16,7 @@
 % TODO: Vul dit aan met je eigen info:
 
 % De titel van het rapport/bachelorproef
-\title{Een analyse van z/OS Health Checker en hoe deze te optimaliseren}
+\title{Een analyse en optimalisatie van z/OS Health Checker}
 
 % Je eigen naam
 \author{Jonas Braem}
@@ -127,7 +127,7 @@ Het onderwerp van deze bachelorproef is gebaseerd op een onderzoeksvoorstel dat 
 \input{literatuurstudie}
 
 
-\renewcommand{\chaptername}{Bijlangen}
+\renewcommand{\chaptername}{Appendix}
 \chapter{Bijlagen}
 
 %%---------- Andere bijlagen --------------------------------------------------
